objects/Bank_Common_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Details</label>
        <referenceTo>Bank_details__c</referenceTo>
        <relationshipLabel>Bank Common Transaction</relationshipLabel>
        <relationshipName>Bank_Common_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_analysis_txn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank analysis txn</label>
        <referenceTo>Bank_analysis_txn__c</referenceTo>
        <relationshipLabel>Bank Common Transaction</relationshipLabel>
        <relationshipName>Bank_Common_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_transactionObjects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank transactionObjects</label>
        <referenceTo>Bank_transactionObjects__c</referenceTo>
        <relationshipLabel>Bank Common Transaction</relationshipLabel>
        <relationshipName>Bank_Common_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>datex__c</fullName>
        <label>datex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tag__c</fullName>
        <label>tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timezone__c</fullName>
        <label>timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timezonetype__c</fullName>
        <label>timezonetype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Common Transaction</label>
    <nameField>
        <label>Bank Common Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Common Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>